Fixed alignment of quantity picker items

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -397,23 +397,24 @@ header {
   .quantity-picker {
     display: grid;
     grid-area: quantity-picker;
-    grid-template-columns: max-content 1fr max-content;
+    grid-template-columns: 58px 1fr 58px;
+    height: 50px;
     background-color: var(--grey-lighter);
     border-radius: var(--roundness-2);
     font-size: var(--font-size-xl);
     font-weight: 700;
+    line-height: 0;
 
     button {
-      font-size: var(--font-size-3xl);
-      font-weight: 700;
       color: var(--primary-color);
-      padding: 8px 17px;
+      height: 100%;
+      padding-bottom: 8px;
     }
 
     .value {
+      font-size: var(--font-size-base);
       justify-self: center;
       align-self: center;
-      font-size: var(--font-size-base);
     }
   }
 
